Fix header button alignment, upadte content layout

--- a/landoui/assets_src/css/components/Navbar.scss
+++ b/landoui/assets_src/css/components/Navbar.scss
@@ -25,4 +25,8 @@
     border: 1px solid $blue;
     color: $blue;
   }
+
+  .navbar-end .navbar-item {
+    padding-top: 26px;
+  }
 }
